@@ -694,8 +694,7 @@ void jtag2::deviceAutoConfig(void)
         }
         if (pDevice->name == 0)
         {
-            fprintf(stderr, "No configuration available for device ID: %0x\n",
-                    device_id);
+            unknownDevice(device_id);
             throw jtag_exception();
         }
     }
@@ -712,8 +711,7 @@ void jtag2::deviceAutoConfig(void)
         }
         if (pDevice->name == 0)
         {
-            fprintf(stderr, "No configuration available for device ID: %0x\n",
-                    device_id);
+            unknownDevice(device_id, false);
             throw jtag_exception();
         }
     }
