@@ -604,8 +604,7 @@ void jtag3::deviceAutoConfig(void)
         }
         if (pDevice->name == 0)
         {
-            fprintf(stderr, "No configuration available for device ID: %0x\n",
-                    device_id);
+            unknownDevice(device_id);
             throw jtag_exception();
         }
     }
@@ -622,8 +621,7 @@ void jtag3::deviceAutoConfig(void)
         }
         if (pDevice->name == 0)
         {
-            fprintf(stderr, "No configuration available for device ID: %0x\n",
-                    device_id);
+            unknownDevice(device_id, false);
             throw jtag_exception();
         }
     }
